--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI = mongodb+srv://rs317129:12345@opino.xdnlma7.mongodb.net/?retryWrites=true&w=majority&appName=Opino
+MONGO_URI = mongodb+srv://rs317129:12345@thisthat1.gp0xu.mongodb.net/?retryWrites=true&w=majority&appName=ThisThat1
 FRONTEND_URL = http://localhost:5173
