--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
+  
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build" :"npm i"
   }
 }
